#90: clean JsonCacheUtils.java