@@ -1,12 +1,17 @@
 package it.gmarseglia.app.controller;
 
+import it.gmarseglia.app.exceptions.CustomRuntimeException;
+
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
 
 public class JsonCacheUtils {
 
+    private JsonCacheUtils(){}
 
     public static String getStringFromResourcesThenURL(String targetFile, String targetUrl) {
         MyLogger logger = MyLogger.getInstance(JsonCacheUtils.class);
@@ -20,7 +25,7 @@ public class JsonCacheUtils {
             textJson = new String(isJson.readAllBytes(), Charset.defaultCharset());
             isJson.close();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new CustomRuntimeException(e);
         }
 
         return textJson;
@@ -31,7 +36,7 @@ public class JsonCacheUtils {
         return classloader.getResourceAsStream(filename);
     }
 
-    public static InputStream getInputStreamFromResourcesThenURL(String filename, String Url) throws IOException {
+    public static InputStream getInputStreamFromResourcesThenURL(String filename, String urlString) throws IOException {
         InputStream result;
 
         result = getInputStreamFromResources(filename);
@@ -39,8 +44,15 @@ public class JsonCacheUtils {
         MyLogger.getInstance(JsonCacheUtils.class).setVerboseFine(false);
 
         if (result == null) {
-            MyLogger.getInstance(JsonCacheUtils.class).logFine(String.format("URL used: %s", Url));
-            result = new URL(Url).openStream();
+            MyLogger.getInstance(JsonCacheUtils.class).logFine(String.format("URL used: %s", urlString));
+            URI uri = null;
+            try {
+                uri = new URI(urlString);
+            } catch (URISyntaxException e) {
+                throw new CustomRuntimeException(e);
+            }
+            URL url = uri.toURL();
+            result = url.openStream();
         } else {
             MyLogger.getInstance(JsonCacheUtils.class).logFine(String.format("file used: %s", filename));
         }
